--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <link rel="icon" type="image/x-icon" href="" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>experimenting with custom favicons</h1>
+  </body>
+  <script src="favicon.js"></script>
 </html>
