--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="" />
-    <title>Document</title>
+    <title>generating favicons with JavaScript</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
